# EazyScore

./: .gitignore  CMakeLists.txt  README.md
EazyScore/: CMakeLists.txt  ESApp.cpp  ESApp.h  ESTableWidget.cpp  ESTableWidget.h  EazyScore.cpp  resource.qrc  style.qss
EazyScore/scripts/: footballTableLaLiga.go
